# protein_set_transformer

./: .gitignore  .gitmodules  CHANGELOG.md  DRYAD_README.md  README.md  TODO.md  pyproject.toml
chtc/debug/: config.toml  debug_inputs.csv  debug_job.sub  debug_run.sh  esm2_t6_8M_inputs.csv
chtc/full-train/: config.toml  train_all.csv  train_inputs.csv  train_job.sub  train_run.sh
chtc/inference/: inputs.csv  predict_job.sub  predict_run.sh
chtc/tuning/: config.toml  esm2_t30_150M_config.toml  esm2_t30_150M_inputs.csv  esm2_t33_650M_config.toml  esm2_t6_8M_config--SMALLER.toml  esm2_t6_8M_config.toml  esm2_t6_8M_inputs.csv  small_job.sub  tuning_inputs.csv  tuning_job.sub  tuning_run.sh
examples/: PST-TL-P__small_predictions.h5  finetuning.ipynb  pst_inference.ipynb  sample_dataset.graphfmt.h5
manuscript/: README.md
manuscript/genome_embeddings/: clustering.ipynb  genome_average.ipynb  kmer.ipynb
manuscript/genome_embeddings/evaluations/: AAI.ipynb  average_AAI_per_cluster.ipynb  taxonomy_purity.ipynb
manuscript/protein_embeddings/: clustering.ipynb  esm_embed  genslm_embed
manuscript/protein_embeddings/annotations/: relabel_VOG.ipynb
manuscript/protein_embeddings/evaluations/: annotation_improvement.ipynb  attention.ipynb  capsid_structure_searches.ipynb  function_co-clustering.ipynb  functional_module_detection.ipynb  functional_purity.ipynb
src/pst/: __init__.py  _typing.py  main.py  train.py  typing.py
src/pst/_kernels/: stacked_batch_chamfer_distance.cpp  stacked_batch_chamfer_distance.py  stacked_batch_chamfer_distance_cuda.cpp  stacked_batch_chamfer_distance_cuda.cu
src/pst/arch/: __init__.py  _types.py  data.py  layers.py  models.py  modules.py
src/pst/arch/lightning/: __init__.py  data.py  distance.py  loss.py  modules.py  sampling.py
src/pst/arch/model/: __init__.py  _blocks.py  _norm.py  models.py
src/pst/arch/training/: __init__.py  distance.py  sampling.py  utils.py
src/pst/cross_validation/: __init__.py  cv.py  utils.py
src/pst/data/: _types.py  config.py  dataset.py  graph.py  loader.py  modules.py  split.py  utils.py
src/pst/embed/: __init__.py  data.py  main.py  model.py  writer.py
src/pst/model/: __init__.py  _types.py  layers.py  models.py
src/pst/nn/: base.py  config.py  layer_drop.py  layers.py  models.py  modules.py
src/pst/nn/training/: distance.py  loss.py  sampling.py
src/pst/nn/utils/: attention.py  distance.py  loss.py  mask.py  norm.py  sampling.py
src/pst/predict/: __init__.py  predict.py  writer.py
src/pst/training/: OLD_distance.py  __init__.py  _types.py  config.py  config.toml  cv.py  debug.py  distance.py  esm2_t30_150M_config.toml  esm2_t6_8M_config.toml  finetune.py  full.py  hyperparameters.py  optuna_callbacks.py  sampling.py  train.py  tuning.py
src/pst/training/cross_validation/: __init__.py  cv.py  test_cv.ipynb  utils.py
src/pst/training/cross_validation/lightning_logs/cv/: cv_summary.tsv
src/pst/training/cross_validation/lightning_logs/cv/version_0/: events.out.tfevents.1687366899.virserver.doit.wisc.edu.387629.28
src/pst/training/cross_validation/lightning_logs/cv/version_0/checkpoints/: epoch=149-step=1200.ckpt
src/pst/training/cross_validation/lightning_logs/cv/version_1/: events.out.tfevents.1687366906.virserver.doit.wisc.edu.387629.29
src/pst/training/cross_validation/lightning_logs/cv/version_1/checkpoints/: epoch=149-step=1200.ckpt
src/pst/training/cross_validation/lightning_logs/cv/version_2/: events.out.tfevents.1687366913.virserver.doit.wisc.edu.387629.30
src/pst/training/cross_validation/lightning_logs/cv/version_2/checkpoints/: epoch=149-step=1500.ckpt
src/pst/training/cross_validation/lightning_logs/fake/: cv_summary.tsv
src/pst/training/cross_validation/lightning_logs/fake/version_0/: events.out.tfevents.1687367867.virserver.doit.wisc.edu.387629.40
src/pst/training/cross_validation/lightning_logs/fake/version_0/checkpoints/: epoch=149-step=1200.ckpt
src/pst/training/cross_validation/lightning_logs/fake/version_1/: events.out.tfevents.1687367873.virserver.doit.wisc.edu.387629.41
src/pst/training/cross_validation/lightning_logs/fake/version_1/checkpoints/: epoch=149-step=1200.ckpt
src/pst/training/cross_validation/lightning_logs/fake/version_2/: events.out.tfevents.1687367880.virserver.doit.wisc.edu.387629.42
src/pst/training/cross_validation/lightning_logs/real/: cv_summary.tsv
src/pst/training/cross_validation/lightning_logs/real/version_0/: events.out.tfevents.1687367406.virserver.doit.wisc.edu.387629.31
src/pst/training/cross_validation/lightning_logs/real/version_1/: events.out.tfevents.1687367413.virserver.doit.wisc.edu.387629.32
src/pst/training/cross_validation/lightning_logs/real/version_2/: events.out.tfevents.1687367420.virserver.doit.wisc.edu.387629.33
src/pst/training/tuning/: __init__.py  manager.py  optuna.py  tuning.py  utils.py
src/pst/training/utils/: constants.py  cv.py  dim.py  lightning.py  pst.py
src/pst/utils/: __init__.py  _signatures.py  _types.py  auto.py  cli.py  dataclass_utils.py  download.py  graphify.py  history.py  mask.py  versions.py  writer.py
src/pst/utils/attrs/: converters.py  dataclass_utils.py  validators.py
src/pst/utils/chtc/: __init__.py  cleanup.py  job.py  main.py  tuning_inputs.csv
src/pst/utils/cli/: __init__.py  augmentation.py  cli.py  data.py  download.py  experiment.py  finetune.py  graphify.py  loss.py  model.py  modes.py  optimizer.py  predict.py  trainer.py  tuning.py  utils.py
src/pst/utils/cli/pydantic/: __init__.py  augmentation.py  cli.py  data.py  experiment.py  loss.py  model.py  optimizer.py  predict.py  trainer.py  utils.py
test/: test_data.graphfmt.h5
test/test_run/: predictions.h5
(+4 files in other folders)
