[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ptn-set-transformer"
version = "1.1.0"
authors = [{ name = "Cody Martin", email = "codycmar10@gmail.com" }]
description = "Training and inference on protein sets (genomes)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9,<3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "torch>=2",
    "transformers>=4.28",
    "lightning>=2",
    "tables",
    "torch_geometric",
    "torch_scatter",
    "numpy<2.0",
    "more-itertools",
    "pydantic>=2,<2.1",
    "lightning-cv[tune]>=0.4",
    # use my custom fork
    "pydantic-argparse @ git+https://github.com/cody-mar10/pydantic-argparse.git",
    "einops",
    "requests",
    "tqdm",
    "fair-esm==2.0.0",
]

[project.optional-dependencies]
tune = ["optuna>=3.1", "sqlite-utils"]

[project.scripts]
pst = "pst:main.main"
chtc-utils = "pst:utils.chtc.main.main"

[project.urls]
"Homepage" = "https://github.com/cody-mar10/protein_set_transformer"
"Bug Tracker" = "https://github.com/cody-mar10/protein_set_transformer/issues"

[tool.ruff]
src = ["src"]
line-length = 90

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"] # allow unused imports in `__init__.py`

[tool.coverage.run]
plugins = ["covdefaults"]
