[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ptn-set-transformer"
version = "2.6.0"
authors = [{ name = "Cody Martin", email = "codycmar10@gmail.com" }]
description = "Training and inference on protein sets (genomes)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "torch>=2",
    "transformers>=4.28",
    "lightning>=2",
    "tables",
    "torch_geometric",
    "torch_scatter",
    "numpy",
    "more-itertools",
    "lightning-cv[tune]>=1.0",                          
    "optuna>=3.1",
    "jsonargparse[signatures]>=4.35.1",                 # must have my PR merged
    "einops",
    "requests",
    "tqdm",
    "fair-esm==2.0.0",
    "scikit-learn",
    "typing-extensions>=4.11; python_version < '3.10'",
    "attrs>=24.2",
    "cattrs>=24.1",
]

[project.optional-dependencies]
test = ["pytest>=8.3", "pytest-cov"]
build = ["ruff", "mypy", "isort", "covdefaults"]
dev = ["ptn-set-transformer[build]", "ptn-set-transformer[test]"]

[project.scripts]
pst = "pst:main.main"
chtc-utils = "pst:utils.chtc.main.main"

[project.urls]
"Homepage" = "https://github.com/cody-mar10/protein_set_transformer"
"Bug Tracker" = "https://github.com/cody-mar10/protein_set_transformer/issues"

[tool.ruff]
src = ["src"]
line-length = 90

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"] # allow unused imports in `__init__.py`

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
plugins = ["covdefaults"]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
filterwarnings = [
    # ignore lightning warnings since it is a 3rd party lib
    "ignore:.*pkg_resources.declare_namespace",
    "ignore:.*pkg_resources is deprecated:DeprecationWarning",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
ptn-set-transformer = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
build = { features = ["build"], solve-group = "default" }
dev = { features = ["dev", "build", "test"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.tasks]
